<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context="com.greegoapp.greegodriver.Activity.DriverPersonalInfoActivity">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/scale_40dp"
            android:background="@color/transparent"
            android:clickable="true"
            android:paddingTop="@dimen/scale_10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/ibCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/scale_3dp"
                android:layout_marginRight="@dimen/scale_5dp"
                android:background="@android:color/transparent"
                android:padding="@dimen/scale_6dp"
                android:src="@mipmap/ic_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/scale_3dp"
                android:layout_marginRight="@dimen/scale_5dp"

                android:background="@android:color/transparent"
                android:padding="@dimen/scale_8dp"
                android:src="@mipmap/ic_edit"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/txt_3"
                android:text="@string/driver_information_title"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_15"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_view"
            app:layout_constraintTop_toBottomOf="@+id/header" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:clickable="true"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/btnNext"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/scale_15dp"
                android:layout_marginRight="@dimen/scale_15dp"
                android:layout_marginTop="@dimen/scale_5dp"
                android:paddingBottom="@dimen/scale_40dp">

                <TextView
                    android:id="@+id/tvPersonalInfoTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_information"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_25"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvGreegoInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvPersonalInfoTitle"
                    android:layout_marginTop="@dimen/scale_10dp"
                    android:text="@string/about_greego"
                    android:textColor="@color/hint_color"
                    android:textSize="@dimen/txt_13" />

                <TextView
                    android:id="@+id/tvInstuction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvGreegoInfo"
                    android:layout_marginBottom="@dimen/scale_10dp"
                    android:layout_marginTop="@dimen/scale_5dp"
                    android:text="@string/enter_name_exactly_in_license"
                    android:textColor="@color/hint_color"
                    android:textSize="@dimen/txt_13" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tILFname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tvInstuction">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtTvFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/legal_fname"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:paddingTop="@dimen/scale_10dp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tILMiddlename"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tILFname">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtTvMiddleName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/middle_name"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tILLastname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tILMiddlename">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtTvLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/legal_lname"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tILSecurityNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tILLastname">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtTvSocialSecurityNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@mipmap/ic_lock"
                        android:hint="@string/social_security_number"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="11" />

                </android.support.design.widget.TextInputLayout>


                <EditText
                    android:id="@+id/tvDateOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/scale_40dp"
                    android:layout_below="@+id/tILSecurityNumber"
                    android:layout_marginTop="@dimen/scale_10dp"
                    android:background="@null"
                    android:focusable="true"
                    android:gravity="bottom"
                    android:hint="@string/birth_date"
                    android:imeOptions="actionDone"
                    android:padding="@dimen/scale_2dp"
                    android:textColor="@color/app_bg"
                    android:textSize="@dimen/txt_15" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/tvDateOfBirth"
                    android:background="@color/hint_color" />
            </RelativeLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="@dimen/scale_200dp"
            android:layout_height="@dimen/scale_40dp"
            android:layout_marginBottom="@dimen/scale_2dp"
            android:layout_marginLeft="@dimen/scale_10dp"
            android:layout_marginRight="@dimen/scale_10dp"
            android:background="@mipmap/bg_rectangle74"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>
</layout>
