<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/bg_rectangle20"
    tools:context="com.greegoapp.greegodriver.Activity.AcceptUserRequestActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.greegoapp.greegodriver.Utils.RoundedImageView
        android:id="@+id/imgVwUserProfile"
        android:layout_width="@dimen/scale_125dp"
        android:layout_height="@dimen/scale_125dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_profile"
        app:corner_radius="@dimen/scale_75dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/tvArrived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/did_you_arrive"
        android:textSize="@dimen/txt_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgVwUserProfile"/>
    <RelativeLayout
        android:id="@+id/rlUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/scale_20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvArrived">
            <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_names"
            android:textSize="@dimen/txt_16"
            android:gravity="center" />
        <TextView
            android:id="@+id/tvDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_16"
            android:text="@string/destination"
            android:layout_marginLeft="@dimen/scale_1dp"
            android:layout_toRightOf="@+id/tvUserName"/>
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/not_editable_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlUserName" />

    <Button
        android:id="@+id/btnConfirmDrop"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/tap_button_color"
        android:text="@string/confirm_drop"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_15"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/view" />
    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/not_editable_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConfirmDrop" />
    <Button
        android:id="@+id/btnDropCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:background="@color/white"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_15"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        />
</android.support.constraint.ConstraintLayout>
